[project]
name = "pqc-nexus"
version = "0.1.0"
description = "Quantum algorithm reference suite + PQC/ML-KEM WebSocket compliance tester"
requires-python = ">=3.11"
dependencies = [
    "qiskit>=1.3",
    "qiskit-aer>=0.15",
    "numpy>=1.26",
    "scipy>=1.13",
    "websockets>=13.0",
    "rich>=13.7",
    "typer>=0.12",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "textual>=0.80",
    "textual-dev>=1.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
oqs = ["oqs-python>=0.10"]

[project.scripts]
pqc-nexus = "runner:app"
pqc-nexus-api = "uvicorn api.main:app --host 0.0.0.0 --port 8888"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
